apps/entangled-frontend/dev/networking/routes/httproute-entangled-frontend-dev-web.yaml
# HTTPRoute main route for HTTPS traffic to entangled-frontend dev.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-entangled-frontend-dev-web
  namespace: entangled-frontend
spec:
  parentRefs:
    - name: dev-gateway-entangled-frontend-dev-web
      sectionName: https
  hostnames:
    - dev-entangled.cardano.vip
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dev-service-entangled-frontend-web
          port: 80
